overflow fix

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,8 +6,9 @@ html, body {
 	// font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-family: 'IBM Plex Mono', monospace;
 	background-color: var(--background);
-	overflow-x: hidden;
 }
+
+html { overflow-x: hidden; }
 
 a {
 	color: #0070f3;
